--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "date-fns": "^2.1.0",
+    "firebase": "^7.0.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-with-firebase-auth": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
