--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-with-firebase-auth": "^1.0.5"
+    "react-with-firebase-auth": "^1.0.5",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
